# ohtu-2021-tehtavat

./: retro.md
viikko1/nhl-statistics-1/src/: player.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/: file1.txt  file2.txt  haara2.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  login_resource.robot  register.robot  resource.robot
viikko4/: .gitignore
viikko4/int-joukko/src/: int_joukko.py
viikko4/int-joukko/src/tests/: int_joukko_test.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/src/tests/: kauppa_test.py
viikko4/tennis/src/: tennis_game.py
viikko4/tennis/src/tests/: tennis_game_test.py
viikko4/verkkokauppa/src/: kauppa.py  ostoskori.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: index.py  kayttoliittyma.py  sovelluslogiikka.py
viikko6/: PULL.md
viikko6/query-language/: pyproject.toml
viikko6/query-language/src/: matchers.py  query_builder.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/src/: index.py  komentolukija.py  konsoli_io.py  kps.py  pelaajat.py  pelitiedottaja.py  siirto.py  sovellus.py  tuomari.py
(+2 files in other folders)
