[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Kalle Luopajärvi <kalle.luopajarvi@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
